added features and working 5

--- a/index.html
+++ b/index.html
@@ -3,21 +3,156 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laxmikant Nishad - AI/ML Engineer</title>
+    <title>Laxmikant Nishad - AI/ML Engineer | Portfolio</title>
     <meta name="description" content="AI/ML Engineer specializing in multi-modal models, LLM fine-tuning, and computer vision. Based in Leeds, UK with 40% accuracy improvements over published baselines." />
+    <meta name="keywords" content="AI Engineer, ML Engineer, Machine Learning, Artificial Intelligence, Computer Vision, NLP, LLM, PyTorch, Hugging Face, Portfolio, Leeds UK" />
     <meta name="author" content="Laxmikant Nishad" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#1e90ff" />
+    <link rel="canonical" href="https://laxmikant-nishad.dev/" />
 
-    <meta property="og:title" content="Laxmikant Nishad - AI/ML Engineer" />
-    <meta property="og:description" content="AI/ML Engineer with expertise in PyTorch, Hugging Face, Computer Vision, and NLP. Available for opportunities in Leeds, UK." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://laxmikant-nishad.dev/" />
+    <meta property="og:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
+    <meta property="og:description" content="AI/ML Engineer with expertise in PyTorch, Hugging Face, Computer Vision, and NLP. Available for opportunities in Leeds, UK." />
+    <meta property="og:image" content="https://laxmikant-nishad.dev/og-image.png" />
+    <meta property="og:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="Laxmikant Nishad Portfolio" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:creator" content="@lovable_dev" />
+    <meta name="twitter:url" content="https://laxmikant-nishad.dev/" />
+    <meta name="twitter:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
+    <meta name="twitter:description" content="AI/ML Engineer with expertise in PyTorch, Hugging Face, Computer Vision, and NLP. Available for opportunities in Leeds, UK." />
+    <meta name="twitter:image" content="https://laxmikant-nishad.dev/og-image.png" />
+    <meta name="twitter:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Laxmikant Nishad",
+      "url": "https://laxmikant-nishad.dev/",
+      "image": "https://laxmikant-nishad.dev/profile.jpg",
+      "jobTitle": "AI/ML Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Sheffield Hallam University"
+      },
+      "alumniOf": {
+        "@type": "EducationalOrganization",
+        "name": "Ufa University"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/in/laxmikant-nishad",
+        "https://github.com/lax-17",
+        "https://twitter.com/lovable_dev"
+      ],
+      "description": "AI/ML Engineer specializing in multi-modal models, LLM fine-tuning, and computer vision with 40% accuracy improvements over published baselines.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Leeds",
+        "addressCountry": "UK"
+      }
+    }
+    </script>
+
+    <!-- Portfolio structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Laxmikant Nishad Portfolio",
+      "url": "https://laxmikant-nishad.dev/",
+      "description": "Portfolio of Laxmikant Nishad, an AI/ML Engineer specializing in multi-modal models, LLM fine-tuning, and computer vision.",
+      "author": {
+        "@type": "Person",
+        "name": "Laxmikant Nishad"
+      }
+    }
+    </script>
+
+    <!-- Favicon and Touch Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Font Optimization -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" as="style" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" media="print" onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" /></noscript>
+
+    <!-- Performance optimizations -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX', {
+        page_title: document.title,
+        page_location: window.location.href,
+        page_path: window.location.pathname
+      });
+    </script>
+
+    <!-- Performance Monitoring -->
+    <script>
+      // Custom performance monitoring
+      if ('performance' in window) {
+        window.addEventListener('load', function() {
+          setTimeout(function() {
+            const perfData = performance.getEntriesByType('navigation')[0];
+            if (perfData) {
+              // Send performance data to analytics
+              gtag('event', 'performance_metrics', {
+                'page_load_time': Math.round(perfData.loadEventEnd - perfData.loadEventStart),
+                'dom_content_loaded': Math.round(perfData.domContentLoadedEventEnd - perfData.domContentLoadedEventStart),
+                'first_paint': Math.round(performance.getEntriesByType('paint')[0]?.startTime || 0),
+                'first_contentful_paint': Math.round(performance.getEntriesByType('paint')[1]?.startTime || 0)
+              });
+            }
+          }, 0);
+        });
+      }
+    </script>
+
+    <!-- Error Tracking -->
+    <script>
+      window.addEventListener('error', function(e) {
+        gtag('event', 'exception', {
+          'description': e.error.toString(),
+          'fatal': false
+        });
+      });
+    </script>
   </head>
 
   <body>
+    <!-- Skip to main content link for screen readers -->
+    <a href="#main-content" class="skip-link sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:px-4 focus:py-2 focus:bg-primary focus:text-primary-foreground focus:rounded">
+      Skip to main content
+    </a>
+
+    <!-- Skip to navigation link -->
+    <a href="#main-navigation" class="skip-link sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-16 focus:z-50 focus:px-4 focus:py-2 focus:bg-primary focus:text-primary-foreground focus:rounded">
+      Skip to navigation
+    </a>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
