Update resume links and download filename to Laxmikant's Resume

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
     </script>
 
     <!-- Favicon and Touch Icons -->
-    <link rel="manifest" href="/manifest.json" />
+    <!-- Force-remove any cached favicon by serving a blank inline icon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3C/svg%3E" />
+    <link rel="shortcut icon" type="image/x-icon" href="data:image/x-icon;," />
+    <link rel="mask-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E" color="#1e90ff" />
+    <link rel="manifest" href="/manifest.json?v=2" />
 
     <!-- Font Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
