🚀 Major Portfolio Enhancements: Contact Form + Quick Wins
✅ Contact Form Fully Functional
- Integrated EmailJS for email sending
- Added spam protection and rate limiting
- Implemented success/error handling with analytics
- Configured with production credentials

✅ Quick Wins Implementation
- Added custom favicon and app icons
- Enhanced 404 page with cosmic theme
- Implemented comprehensive loading states
- Created sitemap for better SEO
- Added social media links in footer
- Prominent 'Hire Me' CTA button in hero
- Contact form success page with auto-redirect
- About page with personal story timeline
- Detailed project case studies
- Comprehensive error boundaries

✅ Technical Improvements
- Better user experience and navigation
- Professional polish and branding
- SEO optimization and discoverability
- Conversion optimization features
- Enhanced accessibility and error handling

All changes tested and ready for production! 🎉

--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
     </script>
 
     <!-- Favicon and Touch Icons -->
-    <!-- Force-remove any cached favicon by serving a blank inline icon -->
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg?v=4" />
-    <link rel="shortcut icon" type="image/x-icon" href="data:image/x-icon;," />
-    <link rel="mask-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E" color="#1e90ff" />
-    <link rel="manifest" href="/manifest.json?v=2" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/profile.jpg" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Font Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
