updated infor added og

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <meta name="author" content="Laxmikant Nishad" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1e90ff" />
-    <link rel="canonical" href="https://laxmikant-nishad.dev/" />
+    <link rel="canonical" href="https://laxmikantnishad.com/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://laxmikant-nishad.dev/" />
+    <meta property="og:url" content="https://laxmikantnishad.com/" />
     <meta property="og:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta property="og:description" content="Applied AI/ML Engineer specializing in LLMs, Transformers, and multi-modal systems. Built healthcare LLM apps with QLoRA and structured JSON outputs. Leeds, UK." />
-    <meta property="og:image" content="https://laxmikant-nishad.dev/og-image.png" />
+    <meta property="og:image" content="https://laxmikantnishad.com/api/og" />
+    <meta property="og:image:secure_url" content="https://laxmikantnishad.com/api/og" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -25,10 +27,10 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://laxmikant-nishad.dev/" />
+    <meta name="twitter:url" content="https://laxmikantnishad.com/" />
     <meta name="twitter:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta name="twitter:description" content="Applied AI/ML Engineer specializing in LLMs, Transformers, and multi-modal systems. Built healthcare LLM apps with QLoRA and structured JSON outputs. Leeds, UK." />
-    <meta name="twitter:image" content="https://laxmikant-nishad.dev/og-image.png" />
+    <meta name="twitter:image" content="https://laxmikantnishad.com/api/og" />
     <meta name="twitter:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
 
     <!-- Schema.org structured data -->
@@ -37,8 +39,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Laxmikant Nishad",
-      "url": "https://laxmikant-nishad.dev/",
-      "image": "https://laxmikant-nishad.dev/profile.jpg",
+      "url": "https://laxmikantnishad.com/",
+      "image": "https://laxmikantnishad.com/profile.jpg",
       "jobTitle": "Applied AI/ML Engineer",
       "worksFor": {
         "@type": "Organization",
@@ -69,7 +71,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Laxmikant Nishad Portfolio",
-      "url": "https://laxmikant-nishad.dev/",
+      "url": "https://laxmikantnishad.com/",
       "description": "Portfolio of Laxmikant Nishad, an Applied AI/ML Engineer specializing in LLMs, Transformers, and multi-modal systems for healthcare and beyond.",
       "author": {
         "@type": "Person",
