updated infor added og3

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta property="og:url" content="https://laxmikantnishad.com/" />
     <meta property="og:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta property="og:description" content="Applied AI/ML Engineer specializing in LLMs, Transformers, and multi-modal systems. Built healthcare LLM apps with QLoRA and structured JSON outputs. Leeds, UK." />
-    <meta property="og:image" content="https://laxmikantnishad.com/profile.jpg" />
-    <meta property="og:image:secure_url" content="https://laxmikantnishad.com/profile.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image" content="https://laxmikantnishad.com/og.png" />
+    <meta property="og:image:secure_url" content="https://laxmikantnishad.com/og.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -30,7 +30,7 @@
     <meta name="twitter:url" content="https://laxmikantnishad.com/" />
     <meta name="twitter:title" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
     <meta name="twitter:description" content="Applied AI/ML Engineer specializing in LLMs, Transformers, and multi-modal systems. Built healthcare LLM apps with QLoRA and structured JSON outputs. Leeds, UK." />
-    <meta name="twitter:image" content="https://laxmikantnishad.com/profile.jpg" />
+    <meta name="twitter:image" content="https://laxmikantnishad.com/og.png" />
     <meta name="twitter:image:alt" content="Laxmikant Nishad - AI/ML Engineer Portfolio" />
 
     <!-- Schema.org structured data -->
